Issue #92 - Fix math menu which now contains so many topics that it overflows off the screen

--- a/KhanAcademy/pages/mainHub/mainHub.css
+++ b/KhanAcademy/pages/mainHub/mainHub.css
@@ -85,6 +85,8 @@
     position: absolute;
     visibility: collapse;
     z-index: 101;
+    overflow: auto;
+    max-height: 100%;
 }
 
     .domainMenu div {
